tests/paczka1/small_fuzzy/64019702.err
Error in line 1: S647 A261 53,0
Error in line 2: bO9iQUa9 A261 5,7
Error in line 8: bO9iQUa9 S647 4,6
Error in line 3: S647 A358 37,7
